2002-09-05  Earnie Boyd  <earnie@users.sf.net>

	* mingwex/fegetenv.c: Change to \n line endings.
	* mingwex/vsnprintf.c: Ditto.
	* mingwex/vsnwprintf.c: Ditto.

2002-09-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/hypotl.c: Replace with version based on cephes
	library.

2002-08-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/sys/param.h: Add ENDIAN defines.
	* test_headers.c: Include sys/param.h.

2002-08-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* test_headers.c: Don't include varargs.h.
	* Makefile.in (test_headers): Don't use -std=xx
	with -xc++.

2002-08-21  Earnie Boyd  <earnie@users.sf.net>

	* include/sys/param.h: New File.

2002-08-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/math.h (asm): Change to __asm__ throughout.
	Expose ISO C99 functions if __GLIPCPP__.
	(hypotf): Use hypot, not _hypot in stub.

2002-08-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/tchar.h: Ansi-fy another comment.

2002-08-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/tchar.h: Ansi-fy comment.

2002-08-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* test_headers.c : New file.
	* Makefile.in (test_headers): New target, using it,
	(SRCDIST_FILES): Distribute it.

2002-08-20  Earnie Boyd  <earnie@users.sf.net>

	* include/_mingw.h: Increment version to 2.2.
	Makefile.in: Ditto.

2002-08-14  Earnie Boyd  <earnie@users.sf.net>

	* include/unistd.h: Add include of process.h.

2002-08-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h (_fcloseall): Add prototype.

2002-07-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/tchar.h (_tfdopen): Correct typo.

2002-07-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* moldname.def.in (chgsign,scalb,finite,fpclass,logb,
	nextafter): Add non-underscored stubs.
	* moldname-msvcrt.def: Regenerate.
	* moldname-crtdll.def: Regenerate.
	* mingwex/math: New directory.